--- a/src/main/resources/templates/styles.css
+++ b/src/main/resources/templates/styles.css
@@ -52,3 +52,16 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
+.cell {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    border: 1px solid black;
+    background-color: white;
+    transition: background-color 0.3s;
+}
+
+.cell.error {
+    background-color: lightcoral; /* Fehlerhafte Zellen rot markieren */
+}
