--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -17,11 +17,6 @@ h1 {
     color: #333;
 }
 
-.sudoku-board {
-    border-collapse: collapse;
-    margin: 20px auto;
-}
-
 .sudoku-board td {
     width: 40px;
     height: 40px;
@@ -31,10 +26,18 @@ h1 {
     background-color: white;
 }
 
-.sudoku-board td.fixed input {
-    background-color: #ddd;
-    font-weight: bold;
-    pointer-events: none;
+/* Dickere Linien für 3x3-Blockgrenzen */
+.sudoku-board tr:nth-child(3n) td {
+    border-bottom: 2px solid black;
+}
+.sudoku-board tr td:nth-child(3n) {
+    border-right: 2px solid black;
+}
+.sudoku-board tr:nth-child(1) td {
+    border-top: 2px solid black;
+}
+.sudoku-board tr td:nth-child(1) {
+    border-left: 2px solid black;
 }
 
 input {
