--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -40,6 +40,11 @@ h1 {
     border-left: 2px solid black;
 }
 
+.cell.same-number {
+    background-color: #d0e6ff; /* Hellblau z. B. */
+}
+
+
 input {
     width: 100%;
     height: 100%;
