--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     <button onclick="startNewGame()">Neues Spiel</button>
     <button onclick="checkSolution()">Lösung prüfen</button>
     <button onclick="resetGame()">Zurücksetzen</button>
-
+    <div id="controls"></div>
     <p id="message"></p>
 </div>
 </body>
